# ShaderHelper

./: .editorconfig  .gitignore  GenerateSolution.bat  LICENSE  Premake5.lua  README.md  ShaderHelper.sln  ShaderHelper.vcxproj  ShaderHelper.vcxproj.filters  bootstrap.bat  bootstrap.command  bootstrap.sh  downloadDep.bat  downloadDep.command  downloadDep.sh  dsymPlist.py  premake5.lua
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml
Binaries/: UE.modules
Binaries/Mac/: UE-BuildSettings.dylib  UE-Projects.dylib  UE-StandaloneRenderer.dylib  UE-TraceLog.dylib  UE.modules
Plugins/: downloadDep.bat
Plugins/ShaderHelperMCP/: .gitignore  Meta.json  README.md  __init__.py  shader_tools.py  tool_registry.py
Plugins/ShaderHelperMCP/Server/: bridge.py  config.py  main.py  pyproject.toml  tools.py
Plugins/Shadertoy/: Meta.json  __init__.py
Premake/: Custom.lua  custom.lua  stack.lua  usage.lua
Resource/Localization/: Chinese.csv  English.csv
Resource/Shaders/: Blit.hlsl  Clear.hlsl  Common.hlsl  GLSL.json  GizmoCommon.hlsl  GizmoMove.hlsl  GizmoRotate.hlsl  GizmoScale.hlsl  HLSL.json  Mip2D.hlsl  Mip3D.hlsl  ModelPreview.hlsl  OutlineMask.hlsl  SceneGrid.hlsl  ScenePreview.hlsl  Texture3DPreview.hlsl  TextureCubePreview.hlsl
Resource/Theme/: Light.json
Source/: CommonHeader.h  CommonHeaderForUE.cpp  CommonHeaderForUE.h  Definitions.h  ProjectDefinitions.h  main.cpp
Source/App/: ShaderHelperApp.cpp  ShaderHelperApp.h
Source/FrameWork/: App.cpp  App.h  CommonHeader.cpp  CommonHeader.h  FrameWorkPrivateDefinitions.h  (+6 more)
docs/: UserGuide.en.md  UserGuide.md
(+677 files in other folders)
