[project]
name = "shaderhelper-mcp"
version = "0.1.0"
description = "FastMCP server for ShaderHelper."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
shaderhelper-mcp = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "config", "bridge", "tools"]
